--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-insightface==0.6.2
-numpy==1.22.3
-opencv_python_headless==4.5.5.64
-pandas==1.4.2
-Pillow==10.3.0
-pydantic==1.10.13
-scikit_learn==1.0.2
-SQLAlchemy==1.4.35
-streamlit==1.37.0
+insightface==0.7.3
+numpy==2.1.0
+onnxruntime==1.19.0
+opencv_python_headless==4.10.0.84
+pandas==2.2.2
+Pillow==10.4.0
+pydantic==2.8.2
+scikit_learn==1.5.1
+SQLAlchemy==2.0.32
+streamlit==1.38.0
